--- a/flask/layout.html
+++ b/flask/layout.html
@@ -16,8 +16,8 @@
 {%- block footer %}
   <div class="footer">
     &copy; Copyright {{ copyright }}.
-    Created using <a href="http://sphinx.pocoo.org/">Sphinx</a>.
   </div>
+  {%- block innerfooter %}{%- endblock %}
   {% if pagename == 'index' %}
   </div>
   {% endif %}
